Add the ability to exit the app. This logs the current user out and finishes the (Parse) application context. Note the the 'Exit app' option may appear on press of menu button rather than in the action bar.
Also cleaned up code for Map and Exit app menu options.
Sort options are now always shown and changed SORT BY to VIEW BY.

--- a/app/src/main/res/menu/pump_list.xml
+++ b/app/src/main/res/menu/pump_list.xml
@@ -3,7 +3,7 @@
     tools:context=".PumpList" >
 
     <item android:id="@+id/sort_options"
-        android:showAsAction="ifRoom"
+        android:showAsAction="always"
         android:orderInCategory="10"
         android:title="@string/sort_by">
         <menu>
