--- a/app/src/main/res/menu/pump_browser.xml
+++ b/app/src/main/res/menu/pump_browser.xml
@@ -6,4 +6,8 @@
         android:orderInCategory="100"
         android:title="Map"
         android:showAsAction="always" />
+
+    <item android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="@string/logout" />
 </menu>
